[package]
name = "osintss"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Základné a aktualizované závislosti ---
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
urlencoding = "2.1"
tokio-stream = "0.1.14"
toml = "0.8"
toml_edit = "0.22"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }

# --- Logovanie a utility ---
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
lazy_static = "1.4"
rpassword = "7.3"
webbrowser = "1.0"

# --- Databázy ---
neo4rs = "0.7"
elasticsearch = { version = "8.5.0-alpha.1", default-features = false, features = ["rustls-tls"] }

# --- AI ---
tract-onnx = "0.21"

# --- Ostatné existujúce závislosti (ponechať ak sa používajú) ---
aes-gcm = "0.10"
pbkdf2 = "0.12"
base64 = "0.21"
llm = { version = "1.2.7" }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
colored = "3.0.0"

# --- Python/Rust FFI ---
pyo3 = { version = "0.21", features = ["extension-module"] }
# Ak budeš používať aj numpy/pandas cez PyO3, pridaj napr. pyo3-ffi, numpy, atď.
# numpy = "0.20"
# pyo3-ffi = "0.21"
